--- a/server/routes/public/stylesheet.css
+++ b/server/routes/public/stylesheet.css
@@ -21,6 +21,20 @@ body, html {
     --default-font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
+@font-face {
+    font-family: "Karnak";
+    src: url("/KarnakPro-Bold.ttf");
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 .flex {
     display: flex;
     justify-content: space-between;
@@ -166,7 +180,7 @@ body, html {
 
 .keyStyle {
     width: calc(var(--key-size) * 43);
-    min-width:max-content;
+    min-width: max-content;
     height: 58px;
     font-size: 13px;
     font-weight: 700;
@@ -175,4 +189,18 @@ body, html {
     border-radius: 4px;
     user-select: none;
     cursor: pointer;
+}
+
+.header {
+    width: 100%;
+    height: min-content;
+    padding: 7px 0 7px 0;
+    border-bottom: 1px solid var(--border-unspecified);
+}
+
+.headerTitle {
+    font-family: "Karnak";
+    font-size: 37px;
+    margin: 0 auto 0 auto;
+    width: min-content;
 }
